Adição de páginas e styles (incluindo footer)

--- a/view/cadastroFuncionario.html
+++ b/view/cadastroFuncionario.html
@@ -14,8 +14,8 @@
     </header>
     <nav class="menu">
         <a href="#">Home</a>
-        <a href="cadastroCliente.html">Cadastro Cliente</a>
-        <a href="cadastroFuncionario.html">Cadastro Funcionário</a>
+        <a href="../view/cadastroCliente.html">Cadastro Cliente</a>
+        <a href="../view/cadastroFuncionario.html">Cadastro Funcionário</a>
         <a href="../view/cadastroProduto.html">Cadastro Produto</a>
         <a href="#">Ver Clientes</a>
         <a href="#">Ver Funcionários</a>
@@ -23,13 +23,15 @@
     </nav>
     <main>
         <article class="cadastro-container">
-            <h2>Cadastrar Cliente</h2>
+            <h2>Cadastrar Funcionário</h2>
             <form>
                 <input placeholder="Nome" type="text"/>
                 <input placeholder="Sobrenome" type="text"/>
                 <input placeholder="CPF" type="text"/>
                 <input placeholder="dd/mm/aaaa" type="date"/>
                 <input placeholder="Telefone" type="tel"/>
+                <input placeholder="Cargo/função" type="text">
+                <input placeholder="Salário" type="text">
                 <input placeholder="Email" type="email"/>
                 <input placeholder="Senha" type="password"/>
                 <p>Selecionar foto de perfil:</p>
