--- a/view/cadastroProduto.html
+++ b/view/cadastroProduto.html
@@ -14,8 +14,8 @@
     </header>
     <nav class="menu">
         <a href="#">Home</a>
-        <a href="cadastroCliente.html">Cadastro Cliente</a>
-        <a href="cadastroFuncionario.html">Cadastro Funcionário</a>
+        <a href="../view/cadastroCliente.html">Cadastro Cliente</a>
+        <a href="../view/cadastroFuncionario.html">Cadastro Funcionário</a>
         <a href="../view/cadastroProduto.html">Cadastro Produto</a>
         <a href="#">Ver Clientes</a>
         <a href="#">Ver Funcionários</a>
@@ -23,16 +23,14 @@
     </nav>
     <main>
         <article class="cadastro-container">
-            <h2>Cadastrar Cliente</h2>
+            <h2>Cadastrar Produto</h2>
             <form>
                 <input placeholder="Nome" type="text"/>
-                <input placeholder="Sobrenome" type="text"/>
-                <input placeholder="CPF" type="text"/>
-                <input placeholder="dd/mm/aaaa" type="date"/>
-                <input placeholder="Telefone" type="tel"/>
-                <input placeholder="Email" type="email"/>
-                <input placeholder="Senha" type="password"/>
-                <p>Selecionar foto de perfil:</p>
+                <input placeholder="Fabricante" type="text"/>
+                <input placeholder="Descrição" type="text"/>
+                <input placeholder="Valor" type="text"/>
+                <input placeholder="Quantidade" type="number"/>
+                <p>Selecionar foto do produto:</p>
                 <label for="file-upload">Escolher arquivo</label>
                 <input id="file-upload" type="file"/>
                 <span class="file-name">Nenhum arquivo escolhido</span>
