adição de mais duas telas e modificação de alguns arquivos

--- a/view/Produto.html
+++ b/view/Produto.html
@@ -27,9 +27,11 @@
             <li><a href="../view/CadastroCliente.html">Cadastro Clientes</a></li>
             <li><a href="../view/cadastroFuncionario.html">Cadastro Funcionário</a></li>
             <li><a href="../view/cadastroProduto.html">Cadastro Produtos</a></li>
-            <li><a href="#">Ver Clientes</a></li>
-            <li><a href="#">Ver Funcionário</a></li>
-            <li><a href="../view/VisualizacaoProduto.html">Ver Produtos</a></li>
+            <li><a href="..//view/cadastroLoja.html">Cadastrar Loja</a></li>
+            <li><a href="../view/visualizarCliente.html">Ver Clientes</a></li>
+            <li><a href="../view/visualizarFuncionario.html">Ver Funcionário</a></li>
+            <li><a href="../view/visualizarProduto.html">Ver Produtos</a></li>
+            <li><a href="../view/visualizarLoja.html">Ver Lojas</a></li>
         </ul>
     </nav>
     <article>
