--- a/view/cadastroFuncionario.html
+++ b/view/cadastroFuncionario.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/styles-cadastroCliente.css">
-    <title>Cadastro na Xhopii</title>
+    <link rel="stylesheet" href="../assets/styles-Cadastros.css">
+    <title>Cadastro de Funcionários</title>
 </head>
 <body>
     <header>
@@ -14,12 +14,14 @@
     </header>
     <nav class="menu">
         <a href="#">Home</a>
-        <a href="../view/cadastroCliente.html">Cadastro Cliente</a>
-        <a href="../view/cadastroFuncionario.html">Cadastro Funcionário</a>
+        <a href="cadastroCliente.html">Cadastro Cliente</a>
+        <a href="cadastroFuncionario.html">Cadastro Funcionário</a>
         <a href="../view/cadastroProduto.html">Cadastro Produto</a>
-        <a href="#">Ver Clientes</a>
-        <a href="#">Ver Funcionários</a>
-        <a href="../view/VisualizacaoProduto.html">Ver Produtos</a>
+        <a href="..//view/cadastroLoja.html">Cadastrar Loja</a>
+        <a href="../view/visualizarCliente.html">Ver Clientes</a>
+        <a href="../view/visualizarFuncionario.html">Ver Funcionários</a>
+        <a href="../view/visualizarProduto.html">Ver Produtos</a>
+        <a href="../view/visualizarLoja.html">Ver Lojas</a>
     </nav>
     <main>
         <article class="cadastro-container">
