--- a/view/login.html
+++ b/view/login.html
@@ -26,8 +26,8 @@
             <h2>Login</h2>
             <input placeholder="Email" type="text" />
             <input placeholder="Senha" type="password" />
-            <button class="entre" onclick="window.location.href='../view/VisualizacaoProduto.html'">
-                ENTRE<!--dps colocar link para home page-->
+            <button class="entre" onclick="window.location.href='../view/Produto.html'">
+                ENTRE
             </button>
             <section class="links">
                 <a href="../view/redefinirSenha.html">Esqueci minha senha</a>
