--- a/view/visualizarLoja.html
+++ b/view/visualizarLoja.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/styles-Cadastros.css">
-    <title>Cadastro de Clientes</title>
+    <link rel="stylesheet" href="../assets/styles-visualizacao.css">
+    <title>Visualizar Produto</title>
 </head>
 <body>
     <header>
@@ -24,24 +24,9 @@
         <a href="../view/visualizarLoja.html">Ver Lojas</a>
     </nav>
     <main>
-        <article class="cadastro-container">
-            <h2>Cadastrar Cliente</h2>
-            <form>
-                <input placeholder="Nome" type="text"/>
-                <input placeholder="Sobrenome" type="text"/>
-                <input placeholder="CPF" type="text"/>
-                <input placeholder="dd/mm/aaaa" type="date"/>
-                <input placeholder="Telefone" type="tel"/>
-                <input placeholder="Email" type="email"/>
-                <input placeholder="Senha" type="password"/>
-                <p>Selecionar foto de perfil:</p>
-                <label for="file-upload">Escolher arquivo</label>
-                <input id="file-upload" type="file"/>
-                <span class="file-name">Nenhum arquivo escolhido</span>
-                <button type="submit">CADASTRAR</button>
-            </form>
-        </article>
-
+        <section class="body">
+            <h1>Implementar visualização</h1>
+        </section>
     </main>
     <footer>
         <section class="opcoes">
