--- a/view/visualizarCliente.html
+++ b/view/visualizarCliente.html
@@ -24,8 +24,11 @@
         <a href="../view/visualizarLoja.html">Ver Lojas</a>
     </nav>
     <main>
+        <section class="titulo">
+            <p>Clientes</p>
+        </section>
         <section class="body">
-            <h1>Implementar visualização</h1>
+            
         </section>
     </main>
     <footer>
