--- a/view/visualizarProduto.html
+++ b/view/visualizarProduto.html
@@ -13,7 +13,7 @@
         <a class="logout" href="login.html" >Sair</a>
     </header>
     <nav class="menu">
-        <a href="#">Home</a>
+        <a href="../view/home.html">Home</a>
         <a href="cadastroCliente.html">Cadastro Cliente</a>
         <a href="cadastroFuncionario.html">Cadastro Funcionário</a>
         <a href="../view/cadastroProduto.html">Cadastro Produto</a>
@@ -24,6 +24,9 @@
         <a href="../view/visualizarLoja.html">Ver Lojas</a>
     </nav>
     <main>
+        <section class="titulo">
+            <p>Produtos</p>
+        </section>
         <section class="body">
             <h1>Implementar visualização</h1>
         </section>
