--- a/view/login.html
+++ b/view/login.html
@@ -26,7 +26,7 @@
             <h2>Login</h2>
             <input placeholder="Email" type="text" />
             <input placeholder="Senha" type="password" />
-            <button class="entre" onclick="window.location.href='../view/Produto.html'">
+            <button class="entre" onclick="window.location.href='home.html'">
                 ENTRE
             </button>
             <section class="links">
