--- a/view/home.html
+++ b/view/home.html
@@ -33,9 +33,11 @@
                         <li class="nav-item"><a class="nav-link" href="CadastroCliente.html">Cadastro Cliente</a></li>
                         <li class="nav-item"><a class="nav-link" href="cadastroFuncionario.html">Cadastro Funcionário</a></li>
                         <li class="nav-item"><a class="nav-link" href="cadastroProduto.html">Cadastro Produto</a></li>
+                        <li class="nav-item"><a class="nav-link" href="cadastroLoja.html">Cadastro Loja</a></li>
                         <li class="nav-item"><a class="nav-link" href="visualizarCliente.html">Ver Clientes</a></li>
                         <li class="nav-item"><a class="nav-link" href="visualizarFuncionario.html">Ver Funcionários</a></li>
                         <li class="nav-item"><a class="nav-link" href="visualizarProduto.html">Ver Produtos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="visualizarLoja.html">Ver Lojas</a></li>
                     </ul>
                 </section>
             </section>
