--- a/view/Produto.html
+++ b/view/Produto.html
@@ -23,7 +23,7 @@
     </header>
     <nav class="nav">
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li><a href="../view/CadastroCliente.html">Cadastro Clientes</a></li>
             <li><a href="../view/cadastroFuncionario.html">Cadastro Funcionário</a></li>
             <li><a href="../view/cadastroProduto.html">Cadastro Produtos</a></li>
