--- a/view/visualizarCliente.html
+++ b/view/visualizarCliente.html
@@ -13,7 +13,7 @@
         <a class="logout" href="login.html" >Sair</a>
     </header>
     <nav class="menu">
-        <a href="#">Home</a>
+        <a href="home.html">Home</a>
         <a href="cadastroCliente.html">Cadastro Cliente</a>
         <a href="cadastroFuncionario.html">Cadastro Funcionário</a>
         <a href="../view/cadastroProduto.html">Cadastro Produto</a>
