--- a/assets/styles-visualizarProduto.css
+++ b/assets/styles-visualizarProduto.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #d3d3d3;
 }
 
 /*Cabecalho*/
@@ -55,32 +56,10 @@ header a{
     background-color: #ffffff;
 }
 
-/*Oferta frete*/
-.oferta{
-    text-align: center;
-}
-
-.oferta img{
-    width: 70%;
-    height: 70%;
-}
-
-/*Barra divisa*/
-.container-divisa{
-    display: flex;
-    justify-content: center;
-}
-
-.divisa{
-    background-color: rgb(250, 128, 114); /* Salmão */
-    height: 2px;
-    width: 100%;
-    max-width: 1200px;
-    margin: 20px 0;
-}
 
 /*Produtos*/
 main{
+    background-color: rgb(255, 255, 255)!important;
     margin: 0% 10% 0% 10%;
 }
 
@@ -128,6 +107,26 @@ main{
     font-size: 18px;
 }
 
+.container1 {
+    display: flex;
+    padding-bottom: 15px;
+    width: 100%;
+}
+.container2 {
+    display: flex;
+    width: 100%;
+}
+
+.coluna1 {
+    flex: 1;
+    font-size: 15px;
+    font-weight: bold;
+}
+.coluna2 {
+    flex: 1;
+    font-size: 15px;
+}
+
 .card-footer {
     display: flex;
     justify-content: space-between;
@@ -153,6 +152,7 @@ main{
     margin-bottom: 10px;
 }
 
+
 /* Ajuste para as colunas de cards */
 .row {
     display: flex;
@@ -169,6 +169,7 @@ main{
     justify-content: center;
 
 }
+
 
 /*Footer*/
 footer {
@@ -277,58 +278,4 @@ footer a:hover {
     margin-top: 20px;
     border-top: 2px solid #ccc;
     padding-top: 15px; 
-}
-
-.carrossel {
-    position: relative;
-    max-width: 100%;
-    height: 100%;
-    margin: 60px 120px 40px 120px;
-    overflow: hidden;
-}
-
-.slides {
-    display: flex;
-    transition: transform 0.5s ease-in-out;
-}
-
-.slide {
-    min-width: 100%;
-    box-sizing: border-box;
-}
-
-.slide img {
-    width: 100%;
-    height: auto;
-}
-
-.prev,
-.next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    padding: 16px;
-    margin-top: -22px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-}
-
-.next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-}
-
-.prev {
-    left: 0;
-    border-radius: 3px 3px 0 0;
-}
-
-.prev:hover,
-.next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
 }
