--- a/view/Produto.html
+++ b/view/Produto.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../assets/styles-visualizacaoProduto.css">
+    <link rel="stylesheet" href="../assets/styles-Produto.css">
     <title>Xhopii</title>
     <script>
         function changeImage(image) {
@@ -17,34 +17,32 @@
 
 <body>
     <header>
-        <img alt="Xhopii logo" src="../img-logo-produtos/logo.png"/>
+        <img alt="Xhopii logo" src="../img/img-Logo/logo.png"/>
         <p class="title">Xhopii</p>
-        <a class="logout" href="login.html" >Sair</a>
+        <a class="logout" href="login.html">Sair</a>
     </header>
-    <nav class="nav">
-        <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="../view/CadastroCliente.html">Cadastro Clientes</a></li>
-            <li><a href="../view/cadastroFuncionario.html">Cadastro Funcionário</a></li>
-            <li><a href="../view/cadastroProduto.html">Cadastro Produtos</a></li>
-            <li><a href="..//view/cadastroLoja.html">Cadastrar Loja</a></li>
-            <li><a href="../view/visualizarCliente.html">Ver Clientes</a></li>
-            <li><a href="../view/visualizarFuncionario.html">Ver Funcionário</a></li>
-            <li><a href="../view/visualizarProduto.html">Ver Produtos</a></li>
-            <li><a href="../view/visualizarLoja.html">Ver Lojas</a></li>
-        </ul>
+    <nav class="menu">
+        <a href="home.html">Home</a>
+        <a href="CadastroCliente.html">Cadastro Cliente</a>
+        <a href="cadastroFuncionario.html">Cadastro Funcionário</a>
+        <a href="cadastroProduto.html">Cadastro Produto</a>
+        <a href="cadastroLoja.html">Cadastrar Loja</a>
+        <a href="visualizarCliente.html">Ver Clientes</a>
+        <a href="visualizarFuncionario.html">Ver Funcionários</a>
+        <a href="visualizarProduto.html">Ver Produtos</a>
+        <a href="visualizarLoja.html">Ver Lojas</a>
     </nav>
     <article>
         <section class="produtos">
             <section class="body">
-                <img src="../img/produto1.png" alt="Camiseta Preta" onclick="changeImage('../img/produto1.png')">
-                <img src="../img/produto2.png" alt="Camiseta Azul" onclick="changeImage('../img/produto2.png')">
-                <img src="../img/produto3.png" alt="Camiseta Verde" onclick="changeImage('../img/produto3.png')">
-                <img src="../img/produto4.png" alt="Camiseta Cinza" onclick="changeImage('../img/produto4.png')">
-                <img src="../img/produto5.png" alt="Camiseta Rosa" onclick="changeImage('../img/produto5.png')">
+                <img src="../img/img-Produto/produto1.png" alt="Camiseta Preta" onclick="changeImage('../img/produto1.png')">
+                <img src="../img/img-Produto/produto2.png" alt="Camiseta Azul" onclick="changeImage('../img/produto2.png')">
+                <img src="../img/img-Produto/produto3.png" alt="Camiseta Verde" onclick="changeImage('../img/produto3.png')">
+                <img src="../img/img-Produto/produto4.png" alt="Camiseta Cinza" onclick="changeImage('../img/produto4.png')">
+                <img src="../img/img-Produto/produto5.png" alt="Camiseta Rosa" onclick="changeImage('../img/produto5.png')">
             </section>
             <section class="bodyII">
-                <img id="mainImage" src="../img/produto1.png" alt="Produto Principal">
+                <img id="mainImage" src="../img/img-Produto/produto1.png" alt="Produto Principal">
             </section>
             <section class="text">
                 <h2>Camisa Desenvolvedor front-end CSS</h2>
@@ -52,11 +50,11 @@
                 <p>171 peças disponíveis</p>
                 <p>Modelos:</p>
                 <section class="cores">
-                    <button onclick="changeImage('../img/produto1.png')">Preto</button>
-                    <button onclick="changeImage('../img/produto2.png')">Azul</button>
-                    <button onclick="changeImage('../img/produto3.png')">Verde</button>
-                    <button onclick="changeImage('../img/produto4.png')">Cinza</button>
-                    <button onclick="changeImage('../img/produto5.png')">Rosa</button>
+                    <button onclick="changeImage('../img/img-Produto/produto1.png')">Preto</button>
+                    <button onclick="changeImage('../img/img-Produto/produto2.png')">Azul</button>
+                    <button onclick="changeImage('../img/img-Produto/produto3.png')">Verde</button>
+                    <button onclick="changeImage('../img/img-Produto/produto4.png')">Cinza</button>
+                    <button onclick="changeImage('../img/img-Produto/produto5.png')">Rosa</button>
                 </section>
                 <p>Tamanhos:</p>
                 <section class="sizes">
@@ -102,36 +100,36 @@
             <section class="pagamentos">
                 <h4>PAGAMENTO</h4>
                 <ul>
-                    <li class="boleto"><img src="../img-pagamento/pgBoleto.png" alt="Imagem Boleto" /></li>
-                    <li class="pix"><img src="../img-pagamento/pgPix.png" alt="Imagem Pix" /></li>
-                    <li class="amex"><img src="../img-pagamento/pgAmex.png" alt="Imagem Cartão Amex" /></li>
-                    <li class="elo"><img src="../img-pagamento/pgElo.png" alt="Imagem Cartão Elo" /></li>
-                    <li class="hiper"><img src="../img-pagamento/pgHiper.png" alt="Imagem Cartão Hipercard" /></li>
-                    <li class="master"><img src="../img-pagamento/pgMaster.png" alt="Imagem Cartão Mastercard" /></li>
-                    <li class="visa"><img src="../img-pagamento/pgVisa.png" alt="Imagem Cartão Visa" /></li>
+                    <li class="boleto"><img src="../img/Footer/MetodosDePagamento/boleto.png" alt="Imagem Boleto"/></li>
+                    <li class="pix"><img src="../img/Footer/MetodosDePagamento/pix.png" alt="Imagem Pix"/></li>
+                    <li class="amex"><img src="../img/Footer/MetodosDePagamento/americaExpress.png" alt="Imagem Cartão Amex"/></li>
+                    <li class="elo"><img src="../img/Footer/MetodosDePagamento/elo.png" alt="Imagem Cartão Elo"/></li>
+                    <li class="hiper"><img src="../img/Footer/MetodosDePagamento/hipercard.png" alt="Imagem Cartão Hipercard"/></li>
+                    <li class="master"><img src="../img/Footer/MetodosDePagamento/masteCard.png" alt="Imagem Cartão Mastercard"/></li>
+                    <li class="visa"><img src="../img/Footer/MetodosDePagamento/visa.png" alt="Imagem Cartão Visa"/></li>
                 </ul>
             </section>
             <section class="siga">
                 <h4>SIGA-NOS</h4>
                 <section class="social-icons">
-                    <a href="#"><img src="../img-siga/insta-logo.png" alt="Imagem logo Instagram">Instagram</a>
-                    <a href="#"><img src="../img-siga/x-logo.png" alt="Imagem logo X">X (Twitter)</a>
-                    <a href="#"><img src="../img-siga/face-logo.png" alt="Imagem logo Facebook">Facebook</a>
-                    <a href="#"><img src="../img-siga/youtube-logo.png" alt="Imagem logo Youtube">Youtube</a>
-                    <a href="#"><img src="../img-siga/linkedin-logo.png" alt="Imagem logo Linkedin">Linkedin</a>
+                    <a href="#"><img src="../img/Footer/RedesSociais/instagram.png" alt="Imagem logo Instagram">Instagram</a>
+                    <a href="#"><img src="../img/Footer/RedesSociais/twitter.png" alt="Imagem logo X">X (Twitter)</a>
+                    <a href="#"><img src="../img/Footer/RedesSociais/facebook.png" alt="Imagem logo Facebook">Facebook</a>
+                    <a href="#"><img src="../img/Footer/RedesSociais/youtube.png" alt="Imagem logo Youtube">Youtube</a>
+                    <a href="#"><img src="../img/Footer/RedesSociais/linkedin.png" alt="Imagem logo Linkedin">Linkedin</a>
                 </section>
             </section>
             <section class="qrcode">
                 <h4>ATENDIMENTO AO CLIENTE</h4>
                 <ul>
-                    <li><img src="../img-app/qr-code.png" alt="QR code" /></li>
-                    <li><img src="../img-app/googleApple.jpg" alt="Google play e Apple store" /></li>
-
+                    <li><img src="../img/Footer/qrcode.png" alt="QR code"/></li>
+                    <li><img src="../img/Footer/qrcode.png" alt="Google play e Apple store"/></li>
+                    
                 </ul>
             </section>
         </section>
         <section class="direito">
-            © 2024 Xhopii. Todos os direitos acadêmicos reservados
+        © 2024 Xhopii. Todos os direitos acadêmicos reservados
         </section>
     </footer>
 </body>
