--- a/view/home.html
+++ b/view/home.html
@@ -3,210 +3,128 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Xhopii - Mês do Consumidor</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../assets/styles-Home.css">
+    <title>Xhopii - Mês do Consumidor</title>
 </head>
+
 <body>
-
-    <!-- Barra superior com logo e botão "Sair" -->
-    <section class="top-bar">
-        <section class="container-fluid d-flex justify-content-between align-items-center">
-            <a class="navbar-brand" href="#">
-                <img src="../img/logo.png" alt="Xhopii Logo" width="40" height="40" class="d-inline-block align-text-top">
-                Xhopii
-            </a>
-            <a href="login.html" onclick="sair()" class="btn btn-outline-light">Sair</a>
-        </section>
-    </section>
-
-    <!-- Barra de navegação -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <section class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <section class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav mx-auto">
-                        <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="CadastroCliente.html">Cadastro Cliente</a></li>
-                        <li class="nav-item"><a class="nav-link" href="cadastroFuncionario.html">Cadastro Funcionário</a></li>
-                        <li class="nav-item"><a class="nav-link" href="cadastroProduto.html">Cadastro Produto</a></li>
-                        <li class="nav-item"><a class="nav-link" href="cadastroLoja.html">Cadastro Loja</a></li>
-                        <li class="nav-item"><a class="nav-link" href="visualizarCliente.html">Ver Clientes</a></li>
-                        <li class="nav-item"><a class="nav-link" href="visualizarFuncionario.html">Ver Funcionários</a></li>
-                        <li class="nav-item"><a class="nav-link" href="visualizarProduto.html">Ver Produtos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="visualizarLoja.html">Ver Lojas</a></li>
-                    </ul>
-                </section>
-            </section>
-        </nav>
+        <img alt="Xhopii logo" src="../img/img-Logo/logo.png"/>
+        <p class="title">Xhopii</p>
+        <a class="logout" href="login.html">Sair</a>
     </header>
+    <nav class="menu">
+        <a href="home.html">Home</a>
+        <a href="CadastroCliente.html">Cadastro Cliente</a>
+        <a href="cadastroFuncionario.html">Cadastro Funcionário</a>
+        <a href="cadastroProduto.html">Cadastro Produto</a>
+        <a href="cadastroLoja.html">Cadastrar Loja</a>
+        <a href="visualizarCliente.html">Ver Clientes</a>
+        <a href="visualizarFuncionario.html">Ver Funcionários</a>
+        <a href="visualizarProduto.html">Ver Produtos</a>
+        <a href="visualizarLoja.html">Ver Lojas</a>
+    </nav>
 
-    <!-- Carrossel Bootstrap -->
-    <section id="carousel">
-        <section id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <section class="carousel-inner">
-                <section class="carousel-item active">
-                    <img src="../img-home/mesconsumidor.png" class="d-block w-100" alt="Promoção Mês do Consumidor">
-                </section>
-                <section class="carousel-item">
-                    <img src="../img-home/mesconsumidor.png" class="d-block w-100" alt="Promoção 2">
-                </section>
-                <section class="carousel-item">
-                    <img src="../img-home/mesconsumidor.png" class="d-block w-100" alt="Promoção 3">
-                </section>
+    <!-- Carrossel -->
+    <section class="carrossel">
+        <section class="slides">
+            <section class="slide">
+                <img src="../img/img-HomeCarrossel/mesconsumidor.png" alt="Slide 1">
             </section>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Anterior</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Próximo</span>
-            </button>
+            <section class="slide">
+                <img src="../img/img-HomeCarrossel/mesconsumidor.png" alt="Slide 2">
+            </section>
+            <section class="slide">
+                <img src="../img/img-HomeCarrossel/mesconsumidor.png" alt="Slide 3">
+            </section>
         </section>
-
+        <!-- Controles de navegação -->
+        <a class="prev" onclick="mudarSlide(-1)">&#10094;</a>
+        <a class="next" onclick="mudarSlide(1)">&#10095;</a>
     </section>
+    <script src="../script/index.js"></script>
+    
 
-    <section class="oferta">
-        <a href="Produto.html"><img src="../img-home/oferta.png" alt=""></a>
-    </section>
+    <section class="oferta"><a href="#"><img src="../img/img-HomeCarrossel/oferta.png"></a></section>
 
-    <!-- Produtos -->
-    <section id="produtos">
-        <h2>Descobertas do Dia</h2>
-        <section class="divider-container">
-            <section class="divider"></section>
+    <main>
+        <!-- Produtos -->
+        <section id="produtos">
+            <h2>DESCOBERTAS DO DIA</h2>
+        </section>
+        <section class="conteiner-divisa">
+            <section class="divisa"></section>
         </section>
         <section class="container">
             <section class="row">
                 <!-- Card 1 -->
-                <section class="col-md-2 col-sm-4">
+                <section class="caixa-prod">
                     <a href="Produto.html" class="card-link">
                         <section class="card">
-                            <img src="../img-logo-produtos/produto1.png" class="card-img-top" alt="Produto 1">
+                            <img src="../img/img-Produto/produto1.png" alt="Produto 1">
                             <section class="card-body">
                                 <h5 class="card-title">Camisa Desenvolvedor Front-End CSS</h5>
                                 <section class="card-footer">
-                                    <span class="price">R$ 59,90</span>
-                                    <span class="availability">171 disponíveis</span>
+                                    <span class="preco">R$ 59,90</span>
+                                    <span class="qtd">171 disponíveis</span>
                                 </section>
                             </section>
                         </section>
                     </a>
                 </section>
-                <!-- Card 2 -->
-                <section class="col-md-2 col-sm-4">
+
+                <!-- Card 1 -->
+                <section class="caixa-prod">
                     <a href="Produto.html" class="card-link">
                         <section class="card">
-                            <img src="../img-logo-produtos/produto1.png" class="card-img-top" alt="Produto 2">
+                            <img src="../img/img-Produto/produto1.png" alt="Produto 1">
                             <section class="card-body">
                                 <h5 class="card-title">Camisa Desenvolvedor Front-End CSS</h5>
                                 <section class="card-footer">
-                                    <span class="price">R$ 59,90</span>
-                                    <span class="availability">171 disponíveis</span>
+                                    <span class="preco">R$ 59,90</span>
+                                    <span class="qtd">171 disponíveis</span>
                                 </section>
                             </section>
                         </section>
                     </a>
                 </section>
-                <!-- Card 3 -->
-                <section class="col-md-2 col-sm-4">
+
+                <!-- Card 1 -->
+                <section class="caixa-prod">
                     <a href="Produto.html" class="card-link">
                         <section class="card">
-                            <img src="../img-logo-produtos/produto1.png" class="card-img-top" alt="Produto 3">
+                            <img src="../img/img-Produto/produto1.png" alt="Produto 1">
                             <section class="card-body">
                                 <h5 class="card-title">Camisa Desenvolvedor Front-End CSS</h5>
                                 <section class="card-footer">
-                                    <span class="price">R$ 59,90</span>
-                                    <span class="availability">171 disponíveis</span>
+                                    <span class="preco">R$ 59,90</span>
+                                    <span class="qtd">171 disponíveis</span>
                                 </section>
                             </section>
                         </section>
                     </a>
                 </section>
-                <!-- Card 4 -->
-                <section class="col-md-2 col-sm-4">
+
+                <!-- Card 1 -->
+                <section class="caixa-prod">
                     <a href="Produto.html" class="card-link">
                         <section class="card">
-                            <img src="../img-logo-produtos/produto1.png" class="card-img-top" alt="Produto 4">
+                            <img src="../img/img-Produto/produto1.png" alt="Produto 1">
                             <section class="card-body">
                                 <h5 class="card-title">Camisa Desenvolvedor Front-End CSS</h5>
                                 <section class="card-footer">
-                                    <span class="price">R$ 59,90</span>
-                                    <span class="availability">171 disponíveis</span>
+                                    <span class="preco">R$ 59,90</span>
+                                    <span class="qtd">171 disponíveis</span>
                                 </section>
                             </section>
                         </section>
                     </a>
                 </section>
-                <!-- Card 5 -->
-                <section class="col-md-2 col-sm-4">
-                    <a href="Produto.html" class="card-link">
-                        <section class="card">
-                            <img src="../img-logo-produtos/produto1.png" class="card-img-top" alt="Produto 5">
-                            <section class="card-body">
-                                <h5 class="card-title">Camisa Desenvolvedor Front-End CSS</h5>
-                                <section class="card-footer">
-                                    <span class="price">R$ 59,90</span>
-                                    <span class="availability">171 disponíveis</span>
-                                </section>
-                            </section>
-                        </section>
-                    </a>
-                </section>
-                <!-- Card 6 -->
-                <section class="col-md-2 col-sm-4">
-                    <a href="Produto.html" class="card-link">
-                        <section class="card">
-                            <img src="../img-logo-produtos/produto1.png" class="card-img-top" alt="Produto 6">
-                            <section class="card-body">
-                                <h5 class="card-title">Camisa Desenvolvedor Front-End CSS</h5>
-                                <section class="card-footer">
-                                    <span class="price">R$ 59,90</span>
-                                    <span class="availability">171 disponíveis</span>
-                                </section>
-                            </section>
-                        </section>
-                    </a>
-                </section>
-                <!-- Card 7 -->
-                <section class="col-md-2 col-sm-4">
-                    <a href="Produto.html" class="card-link">
-                        <section class="card">
-                            <img src="../img-logo-produtos/produto1.png" class="card-img-top" alt="Produto 7">
-                            <section class="card-body">
-                                <h5 class="card-title">Camisa Desenvolvedor Front-End CSS</h5>
-                                <section class="card-footer">
-                                    <span class="price">R$ 59,90</span>
-                                    <span class="availability">171 disponíveis</span>
-                                </section>
-                            </section>
-                        </section>
-                    </a>
-                </section>
-                <!-- Card 8 -->
-                <section class="col-md-2 col-sm-4">
-                    <a href="Produto.html" class="card-link">
-                        <section class="card">
-                            <img src="../img-logo-produtos/produto1.png" class="card-img-top" alt="Produto 8">
-                            <section class="card-body">
-                                <h5 class="card-title">Camisa Desenvolvedor Front-End CSS</h5>
-                                <section class="card-footer">
-                                    <span class="price">R$ 59,90</span>
-                                    <span class="availability">171 disponíveis</span>
-                                </section>
-                            </section>
-                        </section>
-                    </a>
-                </section>
+
             </section>
         </section>
-    </section>
+    </main>
 
-    <!-- Footer -->
     <footer>
         <section class="opcoes">
             <section class="atendimento">
@@ -237,41 +155,38 @@
             <section class="pagamentos">
                 <h4>PAGAMENTO</h4>
                 <ul>
-                    <li class="boleto"><img src="../img-pagamento/pgBoleto.png" alt="Imagem Boleto"/></li>
-                    <li class="pix"><img src="../img-pagamento/pgPix.png" alt="Imagem Pix"/></li>
-                    <li class="amex"><img src="../img-pagamento/pgAmex.png" alt="Imagem Cartão Amex"/></li>
-                    <li class="elo"><img src="../img-pagamento/pgElo.png" alt="Imagem Cartão Elo"/></li>
-                    <li class="hiper"><img src="../img-pagamento/pgHiper.png" alt="Imagem Cartão Hipercard"/></li>
-                    <li class="master"><img src="../img-pagamento/pgMaster.png" alt="Imagem Cartão Mastercard"/></li>
-                    <li class="visa"><img src="../img-pagamento/pgVisa.png" alt="Imagem Cartão Visa"/></li>
+                    <li class="boleto"><img src="../img/Footer/MetodosDePagamento/boleto.png" alt="Imagem Boleto"/></li>
+                    <li class="pix"><img src="../img/Footer/MetodosDePagamento/pix.png" alt="Imagem Pix"/></li>
+                    <li class="amex"><img src="../img/Footer/MetodosDePagamento/americaExpress.png" alt="Imagem Cartão Amex"/></li>
+                    <li class="elo"><img src="../img/Footer/MetodosDePagamento/elo.png" alt="Imagem Cartão Elo"/></li>
+                    <li class="hiper"><img src="../img/Footer/MetodosDePagamento/hipercard.png" alt="Imagem Cartão Hipercard"/></li>
+                    <li class="master"><img src="../img/Footer/MetodosDePagamento/masteCard.png" alt="Imagem Cartão Mastercard"/></li>
+                    <li class="visa"><img src="../img/Footer/MetodosDePagamento/visa.png" alt="Imagem Cartão Visa"/></li>
                 </ul>
             </section>
             <section class="siga">
                 <h4>SIGA-NOS</h4>
                 <section class="social-icons">
-                    <a href="#"><img src="../img-siga/insta-logo.png" alt="Imagem logo Instagram">Instagram</a>
-                    <a href="#"><img src="../img-siga/x-logo.png" alt="Imagem logo X">X (Twitter)</a>
-                    <a href="#"><img src="../img-siga/face-logo.png" alt="Imagem logo Facebook">Facebook</a>
-                    <a href="#"><img src="../img-siga/youtube-logo.png" alt="Imagem logo Youtube">Youtube</a>
-                    <a href="#"><img src="../img-siga/linkedin-logo.png" alt="Imagem logo Linkedin">Linkedin</a>
+                    <a href="#"><img src="../img/Footer/RedesSociais/instagram.png" alt="Imagem logo Instagram">Instagram</a>
+                    <a href="#"><img src="../img/Footer/RedesSociais/twitter.png" alt="Imagem logo X">X (Twitter)</a>
+                    <a href="#"><img src="../img/Footer/RedesSociais/facebook.png" alt="Imagem logo Facebook">Facebook</a>
+                    <a href="#"><img src="../img/Footer/RedesSociais/youtube.png" alt="Imagem logo Youtube">Youtube</a>
+                    <a href="#"><img src="../img/Footer/RedesSociais/linkedin.png" alt="Imagem logo Linkedin">Linkedin</a>
                 </section>
             </section>
             <section class="qrcode">
                 <h4>ATENDIMENTO AO CLIENTE</h4>
                 <ul>
-                    <li><img src="../img-app/qr-code.png" alt="QR code"/></li>
-                    <li><img src="../img-app/googleApple.jpg" alt="Google play e Apple store"/></li>
+                    <li><img src="../img/Footer/qrcode.png" alt="QR code"/></li>
+                    <li><img src="../img/Footer/googleApple.jpg" alt="Google play e Apple store"/></li>
                     
                 </ul>
             </section>
         </section>
         <section class="direito">
-            © 2024 Xhopii. Todos os direitos acadêmicos reservados
+        © 2024 Xhopii. Todos os direitos acadêmicos reservados
         </section>
     </footer>
-
-    <!-- Scripts do Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 </body>
+
 </html>
