--- a/view/visualizarCliente.html
+++ b/view/visualizarCliente.html
@@ -1,36 +1,140 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/styles-visualizacao.css">
-    <title>Visualizar Produto</title>
+    <link rel="stylesheet" href="../assets/style-visualizarCliente.css">
+    <title>Xhopii - Visualizar Clientes</title>
 </head>
 <body>
     <header>
-        <img alt="Xhopii logo" src="../img-logo-produtos/logo.png"/>
+        <img alt="Xhopii logo" src="../img/img-Logo/logo.png">
         <p class="title">Xhopii</p>
         <a class="logout" href="login.html" >Sair</a>
     </header>
+
     <nav class="menu">
         <a href="home.html">Home</a>
-        <a href="cadastroCliente.html">Cadastro Cliente</a>
+        <a href="CadastroCliente.html">Cadastro Cliente</a>
         <a href="cadastroFuncionario.html">Cadastro Funcionário</a>
-        <a href="../view/cadastroProduto.html">Cadastro Produto</a>
-        <a href="..//view/cadastroLoja.html">Cadastrar Loja</a>
-        <a href="../view/visualizarCliente.html">Ver Clientes</a>
-        <a href="../view/visualizarFuncionario.html">Ver Funcionários</a>
-        <a href="../view/visualizarProduto.html">Ver Produtos</a>
-        <a href="../view/visualizarLoja.html">Ver Lojas</a>
+        <a href="cadastroProduto.html">Cadastro Produto</a>
+        <a href="cadastroLoja.html">Cadastrar Loja</a>
+        <a href="visualizarCliente.html">Ver Clientes</a>
+        <a href="visualizarFuncionario.html">Ver Funcionários</a>
+        <a href="visualizarProduto.html">Ver Produtos</a>
+        <a href="visualizarLoja.html">Ver Lojas</a>
     </nav>
+
     <main>
-        <section class="titulo">
-            <p>Clientes</p>
-        </section>
-        <section class="body">
-            
+        <section id="clientes">
+            <h2>CLIENTES</h2>
+            <section class="container">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Nome</th>
+                            <th>Email</th>
+                            <th>Telefone</th>
+                            <th>CPF</th>
+                            <th>Cidade</th>
+                            <th>Ações</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>João Silva</td>
+                            <td>joao.silva@email.com</td>
+                            <td>(11) 99999-9999</td>
+                            <td>428.038.548-30</td>
+                            <td>São Paulo</td>
+                            <td>
+                                <a href="#">Editar</a>|
+                                <a href="#">Excluir</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Maria Souza</td>
+                            <td>maria.souza@email.com</td>
+                            <td>(21) 98888-8888</td>
+                            <td>111.111.111-11</td>
+                            <td>Rio de Janeiro</td>
+                            <td>
+                                <a href="#">Editar</a>|
+                                <a href="#">Excluir</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Roberto Santos</td>
+                            <td>roberto.santos@email.com</td>
+                            <td>(11) 99432-9369</td>
+                            <td>111.111.111-11</td>
+                            <td>São Paulo</td>
+                            <td>
+                                <a href="#">Editar</a>|                                
+                                <a href="#">Excluir</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Carla Amaral</td>
+                            <td>carla.amaral@email.com</td>
+                            <td>(21) 98458-8034</td>
+                            <td>111.111.111-11</td>
+                            <td>Rio de Janeiro</td>
+                            <td>
+                                <a href="#">Editar</a>|                                
+                                <a href="#">Excluir</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Antonio Takano</td>
+                            <td>antonio.takano@email.com</td>
+                            <td>(18) 994967-9989</td>
+                            <td>111.111.111-11</td>
+                            <td>Martinopoís</td>
+                            <td>
+                                <a href="#">Editar</a>|                                
+                                <a href="#">Excluir</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Amanda Souza</td>
+                            <td>amanda.souza@email.com</td>
+                            <td>(21) 98888-8888</td>
+                            <td>111.111.111-11</td>
+                            <td>Rio de Janeiro</td>
+                            <td>
+                                <a href="#">Editar</a>|                                
+                                <a href="#">Excluir</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>João Alves</td>
+                            <td>joao.alves@email.com</td>
+                            <td>(11) 97777-7777</td>
+                            <td>111.111.111-11</td>
+                            <td>São Paulo</td>
+                            <td>
+                                <a href="#">Editar</a>|                                
+                                <a href="#">Excluir</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Ana Souza</td>
+                            <td>ana.souza@email.com</td>
+                            <td>(21) 98888-8888</td>
+                            <td>111.111.111-11</td>
+                            <td>Rio de Janeiro</td>
+                            <td>
+                                <a href="#">Editar</a>|                                
+                                <a href="#">Excluir</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
         </section>
     </main>
+
     <footer>
         <section class="opcoes">
             <section class="atendimento">
@@ -61,30 +165,30 @@
             <section class="pagamentos">
                 <h4>PAGAMENTO</h4>
                 <ul>
-                    <li class="boleto"><img src="../img-pagamento/pgBoleto.png" alt="Imagem Boleto"/></li>
-                    <li class="pix"><img src="../img-pagamento/pgPix.png" alt="Imagem Pix"/></li>
-                    <li class="amex"><img src="../img-pagamento/pgAmex.png" alt="Imagem Cartão Amex"/></li>
-                    <li class="elo"><img src="../img-pagamento/pgElo.png" alt="Imagem Cartão Elo"/></li>
-                    <li class="hiper"><img src="../img-pagamento/pgHiper.png" alt="Imagem Cartão Hipercard"/></li>
-                    <li class="master"><img src="../img-pagamento/pgMaster.png" alt="Imagem Cartão Mastercard"/></li>
-                    <li class="visa"><img src="../img-pagamento/pgVisa.png" alt="Imagem Cartão Visa"/></li>
+                    <li class="boleto"><img src="../img/Footer/MetodosDePagamento/boleto.png" alt="Imagem Boleto"/></li>
+                    <li class="pix"><img src="../img/Footer/MetodosDePagamento/pix.png" alt="Imagem Pix"/></li>
+                    <li class="amex"><img src="../img/Footer/MetodosDePagamento/americaExpress.png" alt="Imagem Cartão Amex"/></li>
+                    <li class="elo"><img src="../img/Footer/MetodosDePagamento/elo.png" alt="Imagem Cartão Elo"/></li>
+                    <li class="hiper"><img src="../img/Footer/MetodosDePagamento/hipercard.png" alt="Imagem Cartão Hipercard"/></li>
+                    <li class="master"><img src="../img/Footer/MetodosDePagamento/masteCard.png" alt="Imagem Cartão Mastercard"/></li>
+                    <li class="visa"><img src="../img/Footer/MetodosDePagamento/visa.png" alt="Imagem Cartão Visa"/></li>
                 </ul>
             </section>
             <section class="siga">
                 <h4>SIGA-NOS</h4>
                 <section class="social-icons">
-                    <a href="#"><img src="../img-siga/insta-logo.png" alt="Imagem logo Instagram">Instagram</a>
-                    <a href="#"><img src="../img-siga/x-logo.png" alt="Imagem logo X">X (Twitter)</a>
-                    <a href="#"><img src="../img-siga/face-logo.png" alt="Imagem logo Facebook">Facebook</a>
-                    <a href="#"><img src="../img-siga/youtube-logo.png" alt="Imagem logo Youtube">Youtube</a>
-                    <a href="#"><img src="../img-siga/linkedin-logo.png" alt="Imagem logo Linkedin">Linkedin</a>
+                    <a href="#"><img src="../img/Footer/RedesSociais/instagram.png" alt="Imagem logo Instagram">Instagram</a>
+                    <a href="#"><img src="../img/Footer/RedesSociais/twitter.png" alt="Imagem logo X">X (Twitter)</a>
+                    <a href="#"><img src="../img/Footer/RedesSociais/facebook.png" alt="Imagem logo Facebook">Facebook</a>
+                    <a href="#"><img src="../img/Footer/RedesSociais/youtube.png" alt="Imagem logo Youtube">Youtube</a>
+                    <a href="#"><img src="../img/Footer/RedesSociais/linkedin.png" alt="Imagem logo Linkedin">Linkedin</a>
                 </section>
             </section>
             <section class="qrcode">
                 <h4>ATENDIMENTO AO CLIENTE</h4>
                 <ul>
-                    <li><img src="../img-app/qr-code.png" alt="QR code"/></li>
-                    <li><img src="../img-app/googleApple.jpg" alt="Google play e Apple store"/></li>
+                    <li><img src="../img/Footer/qrcode.png" alt="QR code"/></li>
+                    <li><img src="../img/Footer/googleApple.jpg" alt="Google play e Apple store"/></li>
                     
                 </ul>
             </section>
