--- a/view/visualizarLoja.html
+++ b/view/visualizarLoja.html
@@ -3,29 +3,142 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/styles-visualizacao.css">
+    <link rel="stylesheet" href="../assets/style-visualizarLoja.css">
     <title>Visualizar Produto</title>
 </head>
 <body>
     <header>
-        <img alt="Xhopii logo" src="../img-logo-produtos/logo.png"/>
+        <img alt="Xhopii logo" src="../img/img-Logo/logo.png"/>
         <p class="title">Xhopii</p>
-        <a class="logout" href="login.html" >Sair</a>
+        <a class="logout" href="login.html">Sair</a>
     </header>
     <nav class="menu">
         <a href="home.html">Home</a>
-        <a href="cadastroCliente.html">Cadastro Cliente</a>
+        <a href="CadastroCliente.html">Cadastro Cliente</a>
         <a href="cadastroFuncionario.html">Cadastro Funcionário</a>
-        <a href="../view/cadastroProduto.html">Cadastro Produto</a>
-        <a href="..//view/cadastroLoja.html">Cadastrar Loja</a>
-        <a href="../view/visualizarCliente.html">Ver Clientes</a>
-        <a href="../view/visualizarFuncionario.html">Ver Funcionários</a>
-        <a href="../view/visualizarProduto.html">Ver Produtos</a>
-        <a href="../view/visualizarLoja.html">Ver Lojas</a>
+        <a href="cadastroProduto.html">Cadastro Produto</a>
+        <a href="cadastroLoja.html">Cadastrar Loja</a>
+        <a href="visualizarCliente.html">Ver Clientes</a>
+        <a href="visualizarFuncionario.html">Ver Funcionários</a>
+        <a href="visualizarProduto.html">Ver Produtos</a>
+        <a href="visualizarLoja.html">Ver Lojas</a>
     </nav>
     <main>
-        <section class="body">
-            <h1>Implementar visualização</h1>
+        <section id="lojas">
+            <h2>LOJAS</h2>
+            <section class="container">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Nome</th>
+                            <th>Email</th>
+                            <th>Telefone</th>
+                            <th>CNPJ</th>
+                            <th>Produtos</th>
+                            <th>Cidade</th>
+                            <th>Ações</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>EstiloTech</td>
+                            <td>contato@estilotech.com</td>
+                            <td>(11) 3456-7890</td>
+                            <td>12.345.678/0001-90</td>
+                            <td>Equipamentos tecnológicos</td>
+                            <td>São Paulo</td>
+                            <td>
+                                <a href="#">Editar</a> ────
+                                <a href="#">Excluir</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>VerdeVita</td>
+                            <td>contato@verdevita.com</td>
+                            <td>(21) 9876-5432</td>
+                            <td>23.456.789/0001-12</td>
+                            <td>Produtos orgânicos e naturais</td>
+                            <td>Rio de Janeiro</td>
+                            <td>
+                                <a href="#">Editar</a> ────
+                                <a href="#">Excluir</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>MegaFerramentas</td>
+                            <td>atendimento@megaferramentas.com.br</td>
+                            <td>(31) 3456-7890</td>
+                            <td>34.567.890/0001-23</td>
+                            <td>Ferramentas e equipamentos</td>
+                            <td>Belo Horizonte</td>
+                            <td>
+                                <a href="#">Editar</a> ────
+                                <a href="#">Excluir</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>CasaFácil Eletrodomésticos</td>
+                            <td>contato@casafacileletro.com.br</td>
+                            <td>(41) 9998-7777</td>
+                            <td>45.678.901/0001-34</td>
+                            <td>Eletrodomésticos</td>
+                            <td>Curitiba</td>
+                            <td>
+                                <a href="#">Editar</a> ────
+                                <a href="#">Excluir</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>FashionTrend</td>
+                            <td>contato@fashiontrendonline.com</td>
+                            <td>(51) 9999-1234</td>
+                            <td>78.901.234/0001-67</td>
+                            <td>Roupas e calçados femininos</td>
+                            <td>Porto Alegre</td>
+                            <td>
+                                <a href="#">Editar</a> ────
+                                <a href="#">Excluir</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>BellaModa</td>
+                            <td>vendas@bellamodaconfeccoes.com</td>
+                            <td>(51) 9876-5432</td>
+                            <td>78.901.234/0001-67</td>
+                            <td>Roupas e acessórios</td>
+                            <td>Porto Alegre</td>
+                            <td>
+                                <a href="#">Editar</a> ────
+                                <a href="#">Excluir</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>UrbanWear</td>
+                            <td>atendimento@urbanwearcasual.com</td>
+                            <td>(11) 9876-5432</td>
+                            <td>90.123.456/0001-89</td>
+                            <td>Roupas casuais</td>
+                            <td>São Paulo</td>
+                            <td>
+                                <a href="#">Editar</a> ────
+                                <a href="#">Excluir</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Elegance Luxo Fashion</td>
+                            <td>contato@eleganceluxofashion.com</td>
+                            <td>(21) 9888-7766</td>
+                            <td>91.234.567/0001-90</td>
+                            <td>Roupas de alta costura</td>
+                            <td>Rio de Janeiro</td>
+                            <td>
+                                <a href="#"> Editar</a> ────
+                                <a href="#">Excluir</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
         </section>
     </main>
     <footer>
@@ -58,36 +171,36 @@
             <section class="pagamentos">
                 <h4>PAGAMENTO</h4>
                 <ul>
-                    <li class="boleto"><img src="../img-pagamento/pgBoleto.png" alt="Imagem Boleto"/></li>
-                    <li class="pix"><img src="../img-pagamento/pgPix.png" alt="Imagem Pix"/></li>
-                    <li class="amex"><img src="../img-pagamento/pgAmex.png" alt="Imagem Cartão Amex"/></li>
-                    <li class="elo"><img src="../img-pagamento/pgElo.png" alt="Imagem Cartão Elo"/></li>
-                    <li class="hiper"><img src="../img-pagamento/pgHiper.png" alt="Imagem Cartão Hipercard"/></li>
-                    <li class="master"><img src="../img-pagamento/pgMaster.png" alt="Imagem Cartão Mastercard"/></li>
-                    <li class="visa"><img src="../img-pagamento/pgVisa.png" alt="Imagem Cartão Visa"/></li>
+                    <li class="boleto"><img src="../img/Footer/MetodosDePagamento/boleto.png" alt="Imagem Boleto"/></li>
+                    <li class="pix"><img src="../img/Footer/MetodosDePagamento/pix.png" alt="Imagem Pix"/></li>
+                    <li class="amex"><img src="../img/Footer/MetodosDePagamento/americaExpress.png" alt="Imagem Cartão Amex"/></li>
+                    <li class="elo"><img src="../img/Footer/MetodosDePagamento/elo.png" alt="Imagem Cartão Elo"/></li>
+                    <li class="hiper"><img src="../img/Footer/MetodosDePagamento/hipercard.png" alt="Imagem Cartão Hipercard"/></li>
+                    <li class="master"><img src="../img/Footer/MetodosDePagamento/masteCard.png" alt="Imagem Cartão Mastercard"/></li>
+                    <li class="visa"><img src="../img/Footer/MetodosDePagamento/visa.png" alt="Imagem Cartão Visa"/></li>
                 </ul>
             </section>
             <section class="siga">
                 <h4>SIGA-NOS</h4>
                 <section class="social-icons">
-                    <a href="#"><img src="../img-siga/insta-logo.png" alt="Imagem logo Instagram">Instagram</a>
-                    <a href="#"><img src="../img-siga/x-logo.png" alt="Imagem logo X">X (Twitter)</a>
-                    <a href="#"><img src="../img-siga/face-logo.png" alt="Imagem logo Facebook">Facebook</a>
-                    <a href="#"><img src="../img-siga/youtube-logo.png" alt="Imagem logo Youtube">Youtube</a>
-                    <a href="#"><img src="../img-siga/linkedin-logo.png" alt="Imagem logo Linkedin">Linkedin</a>
+                    <a href="#"><img src="../img/Footer/RedesSociais/instagram.png" alt="Imagem logo Instagram">Instagram</a>
+                    <a href="#"><img src="../img/Footer/RedesSociais/twitter.png" alt="Imagem logo X">X (Twitter)</a>
+                    <a href="#"><img src="../img/Footer/RedesSociais/facebook.png" alt="Imagem logo Facebook">Facebook</a>
+                    <a href="#"><img src="../img/Footer/RedesSociais/youtube.png" alt="Imagem logo Youtube">Youtube</a>
+                    <a href="#"><img src="../img/Footer/RedesSociais/linkedin.png" alt="Imagem logo Linkedin">Linkedin</a>
                 </section>
             </section>
             <section class="qrcode">
                 <h4>ATENDIMENTO AO CLIENTE</h4>
                 <ul>
-                    <li><img src="../img-app/qr-code.png" alt="QR code"/></li>
-                    <li><img src="../img-app/googleApple.jpg" alt="Google play e Apple store"/></li>
+                    <li><img src="../img/Footer/qrcode.png" alt="QR code"/></li>
+                    <li><img src="../img/Footer/googleApple.jpg" alt="Google play e Apple store"/></li>
                     
                 </ul>
             </section>
         </section>
         <section class="direito">
-         © 2024 Xhopii. Todos os direitos acadêmicos reservados
+        © 2024 Xhopii. Todos os direitos acadêmicos reservados
         </section>
     </footer>
 </body>
